allprojects {
    group = 'dev.aikido'
    version = '1.0-REPLACE-VERSION'

    repositories {
        mavenCentral()
    }

}

subprojects {
    apply plugin: 'java' // Apply the Java plugin to all subprojects

    // Define common configurations for all subprojects
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
    sourceCompatibility = '16'
    targetCompatibility = '16'
}